--- a/style.css
+++ b/style.css
@@ -832,8 +832,10 @@ h4 {
     padding-top: 30px;
     color: #000000;
 }
-.black{
+.title_footer{
     color: black;
+    text-align: center;
+    padding-bottom: 20px;
 }
 
 @media (max-width: 1024px) {
